# roho-rh-blockchain

./: .gitignore  ARCHITECTURE.md  BUILD_METADATA.md  Cargo.toml  QUICK_START.md  README.md  RELEASE_NOTES.txt  RH_CONSTITUTION.txt  TODO.md  genesis.hash  genesis.json
node1_data/: db
node2_data/: snap.0000000000000DAD
src/: lib.rs  main.rs
src/consensus/: block.rs  difficulty.rs  mod.rs  rewards.rs  validation.rs
src/crypto/: hash.rs  merkle.rs  mod.rs  schnorr.rs
src/explorer/: mod.rs  wallet.rs
src/mining/: miner.rs  mod.rs
src/node/: genesis.rs  mod.rs
src/p2p/: mod.rs  peer.rs  protocol.rs  seeds.rs
src/rpc/: methods.rs  mod.rs  server.rs
src/storage/: db.rs  mod.rs  state.rs  utxo.rs
src/validation/: mod.rs  transaction.rs
src/wallet/: mod.rs  wallet.rs
tests/: property_tests.rs
